--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "brace": "^0.11.1",
     "compression": "^1.7.1",
     "lodash": "^4.17.15",
     "polka": "next",
-    "sirv": "^0.4.0"
+    "sirv": "^0.4.0",
+    "sql-formatter": "^2.3.3"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
