--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lodash": "^4.17.15",
     "polka": "next",
     "sirv": "^0.4.0",
-    "sql-formatter": "^2.3.3"
+    "sql-formatter": "^2.3.3",
+    "svelte-ace-editor": "^0.0.1"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
